Adjusting the CSS to use a fixed font-size to avoid text scaling up too much under Windows 8.1 and when Windows is set to scale text.

--- a/src/sketchup-stl/css/base.css
+++ b/src/sketchup-stl/css/base.css
@@ -19,6 +19,7 @@ body {
  */
 html, input, textarea, select, button {
   font: caption; /* Use native UI fonts */
+  font-size: 9pt;
 }
 
 
